# rainbowterm

./: .claude.md  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.rs  config.toml
.claude/: settings.local.json
benches/: colorize.rs
src/: config.rs  context.rs  convert.rs  lib.rs  main.rs  matching.rs  versions.rs
tests/: arista-sample.txt  cisco-sample.txt  integration_tests.rs  juniper-ex2300-sample.txt  juniper-sample.txt  juniper-spectrum-tests.txt  test-profiles.sh
tests/networking/arista/: commands.txt
tests/networking/cisco/: commands.txt
tests/networking/juniper/: commands.txt
tests/networking/juniper/common/: sample.txt
tests/networking/juniper/ex/ex2300/: sample2.conf
tests/networking/juniper/ex/ex4600/: js584wan-01_configuration_prechecks_20251216.conf  js584wan-01_prechecks_20251216.conf
tests/networking/juniper/qfx/qfx5110/: sample1.conf
tests/networking/versa/: commands.txt  vr-sample.conf
tests/networking/versa/sdwan/: sample1.conf
