[package]
name = "rainbowterm"
version = "0.1.0"
edition = "2021"
authors = ["RainbowTerm Contributors"]
description = "Context-aware terminal colorizer for network device output"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rainbowterm"

[dependencies]
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
termcolor = "1.4"
anyhow = "1.0"
dirs = "5.0"
strip-ansi-escapes = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
