[package]
name = "rainbowterm"
version = "0.2.20"
edition = "2021"
authors = ["RainbowTerm Contributors"]
description = "Context-aware terminal colorizer with magnitude spectrum visualization for network device output"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Legendberg/rainbowterm"
homepage = "https://github.com/Legendberg/rainbowterm"
documentation = "https://github.com/Legendberg/rainbowterm"
keywords = ["terminal", "colorizer", "network", "cli", "syntax-highlighting"]
categories = ["command-line-utilities", "visualization"]
readme = "README.md"
exclude = ["tests/juniper-ex2300-sample.txt"]

[dependencies]
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9", optional = true }
toml = "0.9"
toml_edit = "0.22"
termcolor = "1.4"
anyhow = "1.0"
dirs = "6.0"
blake3 = "1.5"
similar = "2.6"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
convert = ["serde_yaml"]  # DEPRECATED: ChromaTerm YAML conversion (uses unmaintained serde_yaml)

[[bin]]
name = "rt"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "colorize"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
